==> Ron0817/Tiva_Projects-main/Tiva_ICM20948/code/ICM_20948_SPI/icm20948.c <==
#include "icm20948.h"

void icm20948_gyro_read(axises* data)
{
//    uint8_t* temp = read_multiple_icm20948_reg(0, B0_GYRO_XOUT_H, 6);
    int32_t temp[6] = {0};
    temp[0] = read_single_icm20948_reg(0, B0_GYRO_XOUT_H);
    temp[1] = read_single_icm20948_reg(0, B0_GYRO_XOUT_L);
    temp[2] = read_single_icm20948_reg(0, B0_GYRO_YOUT_H);
    temp[3] = read_single_icm20948_reg(0, B0_GYRO_YOUT_L);
    temp[4] = read_single_icm20948_reg(0, B0_GYRO_ZOUT_H);
    temp[5] = read_single_icm20948_reg(0, B0_GYRO_ZOUT_L);

    data->x = (int16_t)(temp[0] << 8 | temp[1]);
    data->y = (int16_t)(temp[2] << 8 | temp[3]);
    data->z = (int16_t)(temp[4] << 8 | temp[5]);

}

void icm20948_accel_read(axises* data)
{
//    uint8_t* temp = read_multiple_icm20948_reg(0, B0_ACCEL_XOUT_H, 6);
    int32_t temp[6] = {0};
    temp[0] = read_single_icm20948_reg(0, B0_ACCEL_XOUT_H);
    temp[1] = read_single_icm20948_reg(0, B0_ACCEL_XOUT_L);
    temp[2] = read_single_icm20948_reg(0, B0_ACCEL_YOUT_H);
    temp[3] = read_single_icm20948_reg(0, B0_ACCEL_YOUT_L);
    temp[4] = read_single_icm20948_reg(0, B0_ACCEL_ZOUT_H);
    temp[5] = read_single_icm20948_reg(0, B0_ACCEL_ZOUT_L);

    data->x = (int16_t)(temp[0] << 8 | temp[1]);
    data->y = (int16_t)(temp[2] << 8 | temp[3]);
    data->z = (int16_t)(temp[4] << 8 | temp[5]);

    //    data->z = (int16_t)(temp[4] << 8 | temp[5]) + accel_scale_factor;
    // Add scale factor because calibraiton function offset gravity acceleration. - Really?
}

void icm20948_device_reset()
{
    // Reset sleep mode. Set clock source to auto-select
    write_single_icm20948_reg(0, B0_PWR_MGMT_1, 0x80 | 0x41);
    ROM_SysCtlDelay(SysCtlClockGet()/10);

    UARTprintf("CHECK: B0_PWR_MGMT_1 = %x\n", ICM_SPI_Read(B0_PWR_MGMT_1));
}

void icm20948_wakeup()
{
    uint32_t new_val = 0x01;

    //  Must have UARTprintf first. Why?
    UARTprintf("wake up val is %x\n", new_val);

    //  Set CLKSEL 0x01 to allow full gyro performance
    ICM_SPI_Write(B0_PWR_MGMT_1, new_val);

    // Confirm correct val. To be deleted
    new_val = ICM_SPI_Read(B0_PWR_MGMT_1);
    UARTprintf("CHECK: WAKE UP NEW VAL = 0x01? -> 0x%x\n", new_val);

    ROM_SysCtlDelay(SysCtlClockGet()/10);
}

void icm20948_gyro_calibration()
{
    int i;
    axises temp;
    int32_t gyro_bias[3] = {0};
    uint8_t gyro_offset[6] = {0};

    for(i = 0; i < 100; i++)
    {
        icm20948_gyro_read(&temp);
        gyro_bias[0] += temp.x;
        gyro_bias[1] += temp.y;
        gyro_bias[2] += temp.z;
    }

    gyro_bias[0] /= 100;
    gyro_bias[1] /= 100;
    gyro_bias[2] /= 100;
    UARTprintf("CHECK: Gryo bias (x, y, z) is (%x, %x, %x)\n", gyro_bias[0], gyro_bias[1], gyro_bias[2]);
    // Construct the gyro biases for push to the hardware gyro bias registers,
    // which are reset to zero upon device startup.
    // Divide by 4 to get 32.9 LSB per deg/s to conform to expected bias input format.
    // Biases are additive, so change sign on calculated average gyro biases
    gyro_offset[0] = (-gyro_bias[0] / 4  >> 8) & 0xFF;
    gyro_offset[1] = (-gyro_bias[0] / 4)       & 0xFF;
    gyro_offset[2] = (-gyro_bias[1] / 4  >> 8) & 0xFF;
    gyro_offset[3] = (-gyro_bias[1] / 4)       & 0xFF;
    gyro_offset[4] = (-gyro_bias[2] / 4  >> 8) & 0xFF;
    gyro_offset[5] = (-gyro_bias[2] / 4)       & 0xFF;

    write_single_icm20948_reg(2, B2_XG_OFFS_USRH, gyro_offset[0]);
    write_single_icm20948_reg(2, B2_XG_OFFS_USRL, gyro_offset[1]);

    write_single_icm20948_reg(2, B2_YG_OFFS_USRH, gyro_offset[2]);
    write_single_icm20948_reg(2, B2_YG_OFFS_USRL, gyro_offset[3]);

    write_single_icm20948_reg(2, B2_ZG_OFFS_USRH, gyro_offset[4]);
    write_single_icm20948_reg(2, B2_ZG_OFFS_USRL, gyro_offset[5]);
}

void icm20948_accel_calibration()
{
    int i;
    axises temp;
    uint8_t temp2[8] = {0};
    uint8_t temp3[8] = {0};
    uint8_t temp4[8] = {0};

    int32_t accel_bias[3] = {0};
    int32_t accel_bias_reg[3] = {0};
    uint8_t accel_offset[6] = {0};

    for(i = 0; i < 100; i++)
    {
        icm20948_accel_read(&temp);
        accel_bias[0] += temp.x;
        accel_bias[1] += temp.y;
        accel_bias[2] += temp.z;
    }

    accel_bias[0] /= 100;
    accel_bias[1] /= 100;
    accel_bias[2] /= 100;
    UARTprintf("CHECK: Accel bias (x, y, z) is (%x, %x, %x)\n", accel_bias[0], accel_bias[1], accel_bias[2]);

    uint8_t mask_bit[3] = {0, 0, 0};

//    temp2 = read_multiple_icm20948_reg(1, B1_XA_OFFS_H, 2);
    temp2[0] = read_single_icm20948_reg(1, B1_XA_OFFS_H);
    temp2[1] = read_single_icm20948_reg(1, B1_XA_OFFS_L);
    accel_bias_reg[0] = (int32_t)(temp2[0] << 8 | temp2[1]);
    mask_bit[0] = temp2[1] & 0x01;

//    temp3 = read_multiple_icm20948_reg(1, B1_YA_OFFS_H, 2);
    temp3[0] = read_single_icm20948_reg(1, B1_YA_OFFS_H);
    temp3[1] = read_single_icm20948_reg(1, B1_YA_OFFS_L);
    accel_bias_reg[1] = (int32_t)(temp3[0] << 8 | temp3[1]);
    mask_bit[1] = temp3[1] & 0x01;

//    temp4 = read_multiple_icm20948_reg(1, B1_ZA_OFFS_H, 2);
    temp4[0] = read_single_icm20948_reg(1, B1_ZA_OFFS_H);
    temp4[1] = read_single_icm20948_reg(1, B1_ZA_OFFS_L);
    accel_bias_reg[2] = (int32_t)(temp4[0] << 8 | temp4[1]);
    mask_bit[2] = temp4[1] & 0x01;

    accel_bias_reg[0] -= (accel_bias[0] / 8);
    accel_bias_reg[1] -= (accel_bias[1] / 8);
    accel_bias_reg[2] -= (accel_bias[2] / 8);

    accel_offset[0] = (accel_bias_reg[0] >> 8) & 0xFF;
    accel_offset[1] = (accel_bias_reg[0])      & 0xFE;
    accel_offset[1] = accel_offset[1] | mask_bit[0];

    accel_offset[2] = (accel_bias_reg[1] >> 8) & 0xFF;
    accel_offset[3] = (accel_bias_reg[1])      & 0xFE;
    accel_offset[3] = accel_offset[3] | mask_bit[1];

    accel_offset[4] = (accel_bias_reg[2] >> 8) & 0xFF;
    accel_offset[5] = (accel_bias_reg[2])      & 0xFE;
    accel_offset[5] = accel_offset[5] | mask_bit[2];

//    write_multiple_icm20948_reg(1, B1_XA_OFFS_H, &accel_offset[0], 2);
//    write_multiple_icm20948_reg(1, B1_YA_OFFS_H, &accel_offset[2], 2);
//    write_multiple_icm20948_reg(1, B1_ZA_OFFS_H, &accel_offset[4], 2);
    write_single_icm20948_reg(1, B1_XA_OFFS_H, accel_offset[0]);
    write_single_icm20948_reg(1, B1_XA_OFFS_L, accel_offset[1]);
    write_single_icm20948_reg(1, B1_YA_OFFS_H, accel_offset[2]);
    write_single_icm20948_reg(1, B1_YA_OFFS_L, accel_offset[3]);
    write_single_icm20948_reg(1, B1_ZA_OFFS_H, accel_offset[4]);
    write_single_icm20948_reg(1, B1_ZA_OFFS_L, accel_offset[5]);
}

void cs_high()
{
    ROM_GPIOPinWrite(ICM20948_SPI_CS_PIN_PORT, ICM20948_SPI_CS_PIN_NUMBER, ICM20948_SPI_CS_PIN_NUMBER);
}

void cs_low()
{
    ROM_GPIOPinWrite(ICM20948_SPI_CS_PIN_PORT, ICM20948_SPI_CS_PIN_NUMBER, 0);
}
